# curve

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  README.md  TODO.md  WORKSPACE  build.sh  client.conf  compile-debug.sh  compile-release.sh  data  lseek_test.cpp  mk-deb.sh  test-all.sh  test.cpp  test.sh  write_test.c
.github/workflows/: clang-format.yaml
conf/: chunkserver.conf  chunkserver.conf.example  client.conf  mds.conf
curve-ansible/: deploy_nebd.yml  rolling_update_nebd.yml
curve-sdk/DEBIAN/: control
curvefs/proto/: metaserver.proto  space.proto
curvefs/test/metaserver/self-test/: BUILD.bazel  create_copyset.cpp  create_dentry.cpp  create_inode.cpp  create_partition.cpp  get_dentry.cpp  get_inode.cpp
curvefs_python/: BUILD  curvefs.i  curvefs.py  curvefs_wrap.cxx
docker/: Dockerfile
include/: curve_compiler_specific.h
include/client/: libcurve.h  libcurve_define.h
include/etcdclient/: etcdclient.h
nbd/src/: BUILD  NBDController.cpp  NBDController.h  NBDServer.cpp  NBDTool.cpp  NBDTool.h  define.h  main.cpp
proto/: nameserver2.proto  topology.proto
src/chunkserver/: chunkserver.cpp  chunkserver.h  copyset_node.cpp  heartbeat.cpp  op_request.cpp  op_request.h  register.cpp  register.h
src/client/: BUILD  aio_wrapper.cpp  aio_wrapper.h  chunk_closure.cpp  chunk_closure.h  chunkserver_client.cpp  client_common.cpp  client_common.h  client_config.cpp  client_metric.h  config_info.h  copyset_client.cpp  copyset_client.h  discard_task.cpp  discard_task.h  file_instance.cpp  file_instance.h  io_tracker.cpp  io_tracker.h  iomanager4chunk.cpp  iomanager4file.cpp  iomanager4file.h  lease_executor.cpp  lease_executor.h  libcurve_client.cpp  libcurve_file.cpp  libcurve_file.h  mds_client.cpp  mds_client.h  mds_client_base.cpp  mds_client_base.h  metacache.cpp  metacache.h  metacache_struct.h  request_closure.cpp  request_closure.h  request_context.h  request_scheduler.cpp  request_scheduler.h  request_sender.cpp  (+7 more)
src/common/: encode.h  fast_align.h  math_util.h  namespace_define.h  s3_adapter.cpp
src/fs/: coroutine_io_proxy.cpp  coroutine_io_proxy.h  pfs_filesystem_impl.cpp
src/kvstorageclient/: etcd_client.h
thirdparties/: concurrentqueue.BUILD
tools/: BUILD  curvefsTool.cpp  curvefsTool.h
(+215 files in other folders)
