#
#  Copyright (c) 2021 NetEase Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

COPTS = [
    "-DGFLAGS=gflags",
    "-DOS_LINUX",
    "-DSNAPPY",
    "-DHAVE_SSE42",
    "-DNDEBUG",
    "-fno-omit-frame-pointer",
    "-momit-leaf-frame-pointer",
    "-msse4.2",
    "-pthread",
    "-std=c++11",
    "-Wall",
    "-Werror",
]

cc_binary(
    name = "create_copyset",
    srcs = ["create_copyset.cpp"],
    copts = COPTS,
    deps = [
        "//curvefs/proto:copyset_cc_proto",
        "//external:brpc",
    ],
)

cc_binary(
    name = "get_dentry",
    srcs = ["get_dentry.cpp"],
    copts = COPTS,
    deps = [
        "//curvefs/proto:copyset_cc_proto",
        "//curvefs/proto:metaserver_cc_proto",
        "//external:brpc",
    ],
)

cc_binary(
    name = "create_inode",
    srcs = ["create_inode.cpp"],
    copts = COPTS,
    deps = [
        "//curvefs/proto:copyset_cc_proto",
        "//curvefs/proto:metaserver_cc_proto",
        "//external:brpc",
    ],
)

cc_binary(
    name = "get_inode",
    srcs = ["get_inode.cpp"],
    copts = COPTS,
    deps = [
        "//curvefs/proto:copyset_cc_proto",
        "//curvefs/proto:metaserver_cc_proto",
        "//external:brpc",
    ],
)

cc_binary(
    name = "create_partition",
    srcs = [
        "create_partition.cpp",
    ],
    copts = COPTS,
    deps = [
        "//curvefs/proto:metaserver_cc_proto",
        "//external:brpc",
    ],
)

cc_binary(
    name = "create_dentry",
    srcs = ["create_dentry.cpp"],
    copts = COPTS,
    deps = [
        "//curvefs/proto:copyset_cc_proto",
        "//curvefs/proto:metaserver_cc_proto",
        "//external:brpc",
    ],
)
